--- a/Frontend/vite-project/src/Css/searchMedicalRecord.css
+++ b/Frontend/vite-project/src/Css/searchMedicalRecord.css
@@ -1,41 +1,33 @@
+.search-medical-record {
+  margin: 20px;
+}
+
 .search-container {
-  display: flex;
-  align-items: center;
-}
-
-.search-button {
-  background-color: #129434;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  margin-left: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.search-button:hover {
-  background-color: #1f8b8e;
-}
-
-.record-container {
-  margin-top: 20px;
-}
-
-.record {
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .sorting-buttons {
   display: flex;
-  gap: 10px;
-  margin-bottom: 10px;
+  justify-content: space-between;
 }
 
-.sorting-buttons .btn {
-  width: 200px; /* Set a fixed width for the buttons */
+.sorting-buttons button {
+  width: 200px;
   white-space: nowrap; /* Prevent text wrapping */
+}
+
+.record-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+}
+
+.record {
+  border: 1px solid #ccc;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.record:hover {
+  background-color: #f0f0f0;
 }
