--- a/Frontend/vite-project/src/Css/landingPage.css
+++ b/Frontend/vite-project/src/Css/landingPage.css
@@ -1,12 +1,29 @@
+/* landingPage.css */
+
 .custom-btn {
-  /* Define your custom button styles */
-  background-color: #007bff;
-  color: #fff;
+  display: inline-block;
   padding: 10px 20px;
+  margin: 10px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  border: 2px solid #007bff;
   border-radius: 5px;
-  margin-right: 10px; /* Add margin between buttons */
+  color: #007bff;
+  background-color: transparent;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .custom-btn:hover {
-  background-color: #0056b3;
+  background-color: #007bff;
+  color: #fff;
+}
+
+
+
+.back-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999; /* Ensure the button appears on top of other content */
 }
