--- a/Frontend/vite-project/src/Css/landingPage.css
+++ b/Frontend/vite-project/src/Css/landingPage.css
@@ -1,5 +1,3 @@
-/* landingPage.css */
-
 .custom-btn {
   display: inline-block;
   padding: 10px 20px;
@@ -19,7 +17,11 @@
   color: #fff;
 }
 
-
+.logo-img {
+  height: 130px; /* Adjust height to be twice the original size */
+  width: auto; /* Maintain aspect ratio */
+  background-color: transparent; /* Remove background */
+}
 
 .back-button {
   position: fixed;
