feat: add placeholder buttons to home page and delete function to mr

--- a/Frontend/vite-project/src/Css/medicalRecords.css
+++ b/Frontend/vite-project/src/Css/medicalRecords.css
@@ -14,7 +14,7 @@
 }
 
 .modern-button:hover {
-  background-color: #12907b;
+  background-color: #9a0d80;
 }
 
 /* Additional styles to differentiate from links */
